services/101.longhorn/2.ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: cloudflare-issuer-dni-sh
spec:
  rules:
    - host: longhorn.dni.sh
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.dni.sh
      secretName: kuma-dni-sh-certificate
